# valatest

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  Valatest.vlp  assertion.c  assertion.vala  cmake_install.cmake  testcase.c  testcase.vala  valatest.h  valatest.vapi
cmake/: project.cmake
src/: valatest-testcase.c  valatest-testcase.vala  valatest.c  valatest.vala
test-lib.dir/: DependInfo.cmake  build.make  cmake_clean.cmake  cmake_clean_target.cmake  depend.internal  depend.make  link.txt
